correctly install Valgrind

--- a/tests/ci/docker_images/linux-aarch/amazonlinux-2_gcc-7x/Dockerfile
+++ b/tests/ci/docker_images/linux-aarch/amazonlinux-2_gcc-7x/Dockerfile
@@ -18,7 +18,7 @@ RUN set -ex && \
     cmake \
     ninja-build \
     perl \
-    golang && \
+    golang \
     valgrind && \
     yum clean packages && \
     yum clean metadata && \
