Also install cmake version +3 on AL2 docker images

--- a/tests/ci/docker_images/linux-aarch/amazonlinux-2_base/Dockerfile
+++ b/tests/ci/docker_images/linux-aarch/amazonlinux-2_base/Dockerfile
@@ -15,6 +15,7 @@ ENV LLVM_PROJECT_HOME=${DEPENDENCIES_DIR}/llvm-project
 RUN set -ex && \
     yum -y update && yum install -y \
     cmake \
+    cmake3 \
     ninja-build \
     perl \
     golang \
