--- a/crypto/fipsmodule/CMakeLists.txt
+++ b/crypto/fipsmodule/CMakeLists.txt
@@ -227,6 +227,7 @@ if((ARCH STREQUAL "x86_64" OR ARCH STREQUAL "aarch64") AND
                 curve25519/edwards25519_decode.S
                 curve25519/bignum_neg_p25519.S
                 curve25519/bignum_mod_n25519.S
+                curve25519/bignum_madd_n25519.S
                 )
   elseif(ARCH STREQUAL "aarch64")
     # byte-level interface for aarch64 s2n-bignum curve25519 is in
